--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -73,4 +73,13 @@
     <string name="_3_54_l">₹ 3.54 L</string>
     <string name="carimage">carimage</string>
     <string name="asset_statements" />
+    <string name="like_button">like button</string>
+    <string name="car_name">car_name</string>
+    <string name="car_brand_name">car_brand_name</string>
+    <string name="fuel_type">Fuel Type</string>
+    <string name="fueltype">fueltype</string>
+    <string name="exshowroomprice">exShowroomPrice</string>
+    <string name="ex_showroom_price">EX-Showroom Price</string>
+    <string name="car_color_images">car color images</string>
+    <string name="searchhere">SearchHere</string>
 </resources>
